src/x502api.h


typedef struct st_x502_devrec_inptr t_x502_devrec_inptr;
typedef struct {
    uint32_t sign;  
    char devname[X502_DEVNAME_SIZE]; 
    char serial[X502_SERIAL_SIZE]; 
    char location[X502_LOCATION_STR_SIZE]; 
    uint32_t flags; 
    uint8_t  iface; 
    uint8_t  location_type; 
    char res[122];  
    t_x502_devrec_inptr* internal; 
} t_x502_devrec;
typedef struct st_x502* t_x502_hnd;
typedef char (*t_x502_serial_list)[X502_SERIAL_SIZE];
X502_EXPORT(int32_t) X502_FreeDevRecordList(t_x502_devrec *list, uint32_t size);
X502_EXPORT(int32_t) X502_AsyncGetAdcFrame(t_x502_hnd hnd, uint32_t flags,
                                       uint32_t tout, double* data);
X502_EXPORT(int32_t) X502_Recv(t_x502_hnd hnd, uint32_t* buf, uint32_t size, uint32_t tout);
X502_EXPORT(int32_t) X502_Send(t_x502_hnd hnd, const uint32_t* buf, uint32_t size, uint32_t tout);
X502_EXPORT(int32_t) X502_ProcessAdcData(t_x502_hnd hnd, const uint32_t* src,
                                          double *dest, uint32_t *size, uint32_t flags);
X502_EXPORT(int32_t) X502_ProcessData(t_x502_hnd hnd, const uint32_t* src, uint32_t size,
                     uint32_t flags, double *adc_data, uint32_t *adc_data_size,
                     uint32_t *din_data, uint32_t *din_data_size);
X502_EXPORT(int32_t) X502_ProcessDataWithUserExt(t_x502_hnd hnd, const uint32_t* src, uint32_t size,
                                   uint32_t flags, double *adc_data,
                                   uint32_t *adc_data_size, uint32_t *din_data,
                                   uint32_t *din_data_size,
                                   uint32_t *usr_data, uint32_t *usr_data_size);
X502_EXPORT(int32_t) X502_PrepareData(t_x502_hnd hnd, const double* dac1, const double* dac2,
                            const uint32_t* digout, uint32_t size, int32_t flags,
                            uint32_t* out_buf);
X502_EXPORT(int32_t) X502_BfMemRead(t_x502_hnd hnd, uint32_t addr, uint32_t* regs,
                                      uint32_t size);
X502_EXPORT(int32_t) X502_BfMemWrite(t_x502_hnd hnd, uint32_t addr,
                                      const uint32_t* regs, uint32_t size);
X502_EXPORT(int32_t) X502_BfExecCmd(t_x502_hnd hnd, uint16_t cmd_code, uint32_t par,
                                    const uint32_t* snd_data, uint32_t snd_size,
                                    uint32_t* rcv_data, uint32_t rcv_size,
                                    uint32_t tout, uint32_t* recvd_size);
X502_EXPORT(int32_t) X502_FlashRead(t_x502_hnd hnd, uint32_t addr, uint8_t* data,
                                    uint32_t size);
X502_EXPORT(int32_t) X502_FlashWrite(t_x502_hnd hnd, uint32_t addr,
                                     const uint8_t* data, uint32_t size);
X502_EXPORT(int32_t) X502_FlashErase(t_x502_hnd hnd, uint32_t addr, uint32_t size);
X502_EXPORT(int32_t) X502_FlashWriteEnable(t_x502_hnd hnd);
X502_EXPORT(int32_t) X502_FlashWriteDisable(t_x502_hnd hnd);
X502_EXPORT(uint32_t) X502_GetLibraryVersion(void);
X502_EXPORT(const char*) X502_GetErrorString(int32_t err);
X502_EXPORT(int32_t) X502_LedBlink(t_x502_hnd hnd);
X502_EXPORT(int32_t) X502_SetDigInPullup(t_x502_hnd hnd, uint32_t pullups);
X502_EXPORT(int32_t) X502_CheckFeature(t_x502_hnd hnd, uint32_t feature);